# 11Zip

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  elzip.cpp  elzip.hpp  unzipper.cpp  unzipper.h  zipper.cpp  zipper.h
.github/workflows/: build.yml
extlibs/minizip/: CMakeLists.txt
extlibs/zlib/: CMakeLists.txt
include/elzip/: elzip.hpp  unzipper.hpp  zipper.hpp
minizip/: CMakeLists.txt
src/: elzip.cpp  unzipper.cpp  zipper.cpp
test/: CMakeLists.txt
test/src/: unzipper_test.cpp
tests/: CMakeLists.txt  test_extract_zip.cpp  test_zip_file.cpp  test_zip_folder.cpp
tests/files/: test2.txt
